change java to 8